--- a/styl9.css
+++ b/styl9.css
@@ -2,6 +2,7 @@ nav{
     height:200px;
     display:flex;
     flex-wrap: wrap;
+    background-color: rgb(216, 157, 157);
 }
 .mainLink {
     flex-basis:50%;
@@ -17,4 +18,26 @@ nav{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+}
+.baner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width:100%;
+    height:100px;
+    background-color: red;
+}
+main *{ 
+    width:50%;
+}
+footer {
+    width:100%;
+    background-color: green;
+    font-style: italic;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    bottom:0;
+    position: absolute
 }
