--- a/index/styl9.css
+++ b/index/styl9.css
@@ -1,3 +1,43 @@
-body {
-  background-color: aquamarine;
+* {
+  font-family: Georgia;
+}
+
+.nav_left, .nav_right {
+  display: inline-block;
+  background-color: rgb(197, 85, 160);
+  text-align: center;
+  width: 100%;
+  height: 180px;
+}
+
+.footer, .banner {
+  background-color: rgb(246, 226, 222);
+  text-align: center;
+  height: 100px;
+  
+}
+
+.article_left, .article_right {
+  background-color: rgb(197, 85, 160);
+  text-align: center;
+  width: 100%;
+  height: 400px;
+}
+
+.nav_left {
+  background-image: "cukierki1.jpg";
+
+  font-size: 150%;
+  text-decoration: none;
+}
+
+table {
+  border-style: 2px solid blue;
+  margin: 20px;
+
+}
+
+.banner {
+  font-size: 200%;
+  letter-spacing: 10px;
 }
