--- a/styl9.css
+++ b/styl9.css
@@ -1,8 +1,14 @@
+body{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    padding: 0;
+    margin:0;
+}
 nav{
-    height:200px;
+    height:180px;
     display:flex;
     flex-wrap: wrap;
-    background-color: rgb(216, 157, 157);
+    background-color: rgb(197, 85, 150);
+    text-align: center;
 }
 .mainLink {
     flex-basis:50%;
@@ -14,10 +20,16 @@ nav{
 .zamowieniaLink { 
     flex-basis:50%;
     height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+}
+.zamowieniaLink a {
+    display: inline-block;
+    margin-right: 70px;
+    margin-bottom: 120px;
+    font-size: 150%;
+    text-decoration: none;
+    background-image: url("cukierki1.jpg");
+    width:200px;
+    height: 150px;
 }
 .baner {
     display: flex;
@@ -25,19 +37,43 @@ nav{
     justify-content: center;
     width:100%;
     height:100px;
-    background-color: red;
+    padding:10px;
+    background-color: rgb(246, 226, 222);
+    text-align:center;
 }
-main *{ 
-    width:50%;
+main{ 
+    display: flex;
+    color:white;
+    height: 400px;
+}
+.leftPanel {
+    flex-basis: 50%;
+    background-color: rgb(197, 85, 150);
+}
+.rightPanel {
+    flex-basis: 50%;
+    background-color: rgb(197, 85, 150);
+}
+.rightPanel img {
+    width:100%;
 }
 footer {
     width:100%;
-    background-color: green;
+    background-color: rgb(246, 226, 222);
     font-style: italic;
     height: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
-    bottom:0;
-    position: absolute
+    text-align:center;
+    padding: 10px;
+}
+table, td {
+    border: solid 2px blue;
+    margin:20px;
+    padding:10px;
+}
+h2{
+    letter-spacing: 10px;
+    font-size: 200%;
 }
